--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>springmvc-01-servlet</module>
         <module>springmvc-02-hellomvc</module>
+        <module>springmvc-03-annotation</module>
     </modules>
 
     <!--导入依赖-->
@@ -48,5 +49,21 @@
 
 
     </dependencies>
+
+    <!--静态资源过滤-->
+    <!--绑定异常-->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+    </build>
 
 </project>
