--- a/springmvc-04-controller/pom.xml
+++ b/springmvc-04-controller/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>springmvc-04-controller</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+    </dependencies>
 </project>
