--- a/springmvc-04-controller/web/WEB-INF/web.xml
+++ b/springmvc-04-controller/web/WEB-INF/web.xml
@@ -19,4 +19,40 @@
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--
+    自定义过滤器解决乱码
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>com.wang.filter.EncodingFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        &lt;!&ndash;
+            / : 除了jsp文件
+            /*: 所有文件
+        &ndash;&gt;
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    -->
+
+    <!--spring提供的过滤器解决乱码-->
+    <filter>
+        <filter-name>encodingSpring</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encodingSpring</filter-name>
+        <!--
+            / : 除了jsp文件
+            /*: 所有文件
+        -->
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
