--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springmvc-03-annotation</module>
         <module>springmvc-04-controller</module>
         <module>springmvc-05-json</module>
+        <module>springmvc-06-ajax</module>
     </modules>
 
     <!--导入依赖-->
@@ -47,6 +48,12 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
         </dependency>
 
 
