--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
         <module>springmvc-04-controller</module>
         <module>springmvc-05-json</module>
         <module>springmvc-06-ajax</module>
-        <module>springmvc-07-intercepter</module>
+        <module>springmvc-07-interceptor</module>
+        <module>springmvc-08-file</module>
     </modules>
 
     <!--导入依赖-->
