--- a/springmvc-08-file/pom.xml
+++ b/springmvc-08-file/pom.xml
@@ -9,13 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springmvc-07-intercepter</artifactId>
+    <artifactId>springmvc-08-file</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0-b07</version>
         </dependency>
     </dependencies>
 
